update Ingress host to get.digwi.online

--- a/manifests/ingress.yml
+++ b/manifests/ingress.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: get-tasks-api.jhandu.shop
+    - host: get.digwi.online
       http:
         paths:
           - pathType: Prefix
