--- a/manifests/ingress.yml
+++ b/manifests/ingress.yml
@@ -2,8 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todo-get-task-api-ingress
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - get.digwi.online
+      secretName: get-digwi-tls
   rules:
     - host: get.digwi.online
       http:
